Projeot quase finalizado

--- a/ListFood/Views/Item/Register.cshtml
+++ b/ListFood/Views/Item/Register.cshtml
@@ -5,6 +5,7 @@
 
 <alert texto="@TempData["message"]"></alert>
 
+<a asp-action="index" > List of Itens</a>
 <form asp-action="Register">
 
     <partial name="_Form"></partial>
